# nu_plugin_topology

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: PLAN.md
.claude/plans/: unified-topology-plan.md
.zed/: build-tests.sh  debug.json
benches/: topology_bench.rs
nushell/topology/: export.nu  mod.nu  pipeline.nu  report.nu
nushell/topology/adapters/: chrome-bookmarks.nu  directory.nu  github-stars.nu  json.nu
scripts/: bookmarks.nu  directory.nu  stars.nu
src/: cli.rs  lib.rs  lsp.rs  main.rs  mcp.rs  ops.rs
src/algo/: cache.rs  clustering.rs  discover.rs  lsh.rs  minhash.rs  mod.rs  nmf.rs  sampling.rs  simhash.rs  storage.rs  string_distance.rs  taxonomy.rs  tfidf.rs  tokenizer.rs  url_normalize.rs
src/commands/: analyze.rs  cache_cmd.rs  classify.rs  dedup.rs  fingerprint.rs  generate_taxonomy.rs  mod.rs  normalize_url.rs  organize.rs  sample.rs  similarity.rs  tags.rs  topics.rs  util.rs
taxonomies/: default.json
tests/: mcp_test.rs  ops_test.rs
