[package]
name = "nu_plugin_topology"
version = "0.1.0"
edition = "2021"
description = "Content topology, classification, and deduplication engine for Nushell"
license = "MIT"

[[bin]]
name = "nu_plugin_topology"
path = "src/main.rs"
bench = false
required-features = ["plugin"]

[[bin]]
name = "topology"
path = "src/cli.rs"
bench = false
required-features = ["cli"]

[lib]
bench = false

[features]
default = ["plugin"]
plugin = ["dep:nu-plugin", "dep:nu-protocol"]
cli = ["dep:clap"]
mcp = ["cli", "dep:rmcp", "dep:tokio", "dep:schemars"]
lsp = ["cli", "dep:tower-lsp", "dep:tokio", "dep:schemars"]
cache = ["dep:rusqlite"]

[dependencies]
# Nushell plugin (optional — only for nu_plugin_topology binary)
nu-plugin = { version = "0.110.0", optional = true }
nu-protocol = { version = "0.110.0", features = ["plugin"], optional = true }

# CLI (optional — only for topology binary)
clap = { version = "4.5", features = ["derive"], optional = true }

# MCP server (optional — only for topology --mcp)
rmcp = { version = "0.16", features = [
  "server",
  "transport-io",
  "macros",
], optional = true }

# LSP server (optional — only for topology --lsp)
tower-lsp = { version = "0.20", optional = true }

# Shared async runtime for MCP + LSP
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
], optional = true }

# JSON Schema generation for MCP tool parameters
schemars = { version = "1", optional = true }

# SQLite cache (optional — only for --cache flag)
rusqlite = { version = "0.33", features = ["bundled"], optional = true }

# Core (always included)
unicode-segmentation = "1.12"
regex = "1.12.3"
strsim = "0.11"
url = "2.5"
siphasher = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11"

# Pin interprocess to 2.2.x to match nu-plugin-core 0.110.0 API
interprocess = "=2.2.2"

[dev-dependencies]
nu-plugin-test-support = "0.110.0"
nu-cmd-lang = "0.110.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "topology_bench"
harness = false
required-features = ["cache"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
